@@ -388,7 +388,7 @@ CONFIG_NET_BUFSIZE=562
 CONFIG_NET_TCP=y
 CONFIG_NET_TCP_CONNS=40
 CONFIG_NET_MAX_LISTENPORTS=40
-CONFIG_NET_TCP_READAHEAD_BUFSIZE=562
+# CONFIG_NET_TCP_READAHEAD_BUFSIZE=562
 CONFIG_NET_NTCP_READAHEAD_BUFFERS=16
 CONFIG_NET_TCP_RECVDELAY=0
 CONFIG_NET_TCPBACKLOG=y
@@ -401,7 +401,7 @@ CONFIG_NET_ICMP_PING=y
 # CONFIG_NET_PINGADDRCONF is not set
 # CONFIG_NET_IGMP is not set
 CONFIG_NET_STATISTICS=y
-CONFIG_NET_RECEIVE_WINDOW=562
+# CONFIG_NET_RECEIVE_WINDOW=562
 CONFIG_NET_ARPTAB_SIZE=16
 # CONFIG_NET_ARP_IPIN is not set
 
